<resources>
    <string name="app_name">Royal FitnessMHR</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="nav_home">الصفحة الرئيسية</string>
    <string name="nav_gallery">حسابي</string>
    <string name="nav_kapten">المدرب</string>
    <string name="nav_share">الخدمات </string>
    <string name="nav_share1"> اللياقة البدنية</string>
    <string name="nav_share2"> المساج</string>
    <string name="nav_share3">حمام البخار </string>
    <string name="nav_eat">الحمية الغذائية</string>
    <string name="nav_eat1">الوجبات المساندة</string>
    <string name="nav_time">مواعيد العمل</string>
    <string name="nav_salary">رسوم الاشتراك</string>
    <string name="nav_exercise">بدأ التمرين</string>
    <string name="nav_Advertising">اعلانات</string>
    <string name="nav_sharee">مشاركة التطبيق </string>
    <string name="nav_need">المساعدة</string>

    <string name="navigation_home">الصفحة الرئيسية</string>
    <string name="navigation_dashboard">حسابي</string>
    <string name="title_notifications">Notifications</string>


</resources>
