<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.royalfitnessmhr.ui.home.HomeFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_home"/>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.royalfitnessmhr.ui.gallery.GalleryFragment"
        android:label="@string/nav_gallery"
        tools:layout="@layout/fragment_gallery"/>

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.royalfitnessmhr.ui.slideshow.SlideshowFragment"
        android:label="@string/nav_eat"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.royalfitnessmhr.ui.tools.ToolsFragment"
        android:label="@string/nav_eat1"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.royalfitnessmhr.ui.share.ShareFragment"
        android:label="الخدمات "
        tools:layout="@layout/fragment_share" />
    <fragment
        android:id="@+id/nav_share1"
        android:name="com.example.royalfitnessmhr.ui.fitnees.FitneesFragment"
        android:label="اللياقة البدنية"
        tools:layout="@layout/fragment_fitnees" />
    <fragment
        android:id="@+id/nav_share3"
        android:name="com.example.royalfitnessmhr.ui.bathroom.BathroomFragment"
        android:label=" حمام البخار"
        tools:layout="@layout/fragment_fitnees" />
    <fragment
        android:id="@+id/nav_share2"
        android:name="com.example.royalfitnessmhr.ui.masag.MasagFragment"
        android:label="@string/nav_share2"
        tools:layout="@layout/fragment_masag" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.royalfitnessmhr.ui.send.SendFragment"
        android:label="@string/nav_kapten"
        tools:layout="@layout/fragment_send" />
    <fragment
        android:id="@+id/nav_time"
        android:name="com.example.royalfitnessmhr.ui.time.TimeFragment"
        android:label="@string/nav_time"
        tools:layout="@layout/fragment_time" />

    <fragment
        android:id="@+id/nav_salary"
        android:name="com.example.royalfitnessmhr.ui.salary.SalaryFragment"
        android:label="@string/nav_salary"
        tools:layout="@layout/fragment_salary" />
    <fragment
        android:id="@+id/nav_startec"
        android:name="com.example.royalfitnessmhr.ui.startec.StartecFragment"
        android:label="@string/nav_exercise"
        tools:layout="@layout/fragment_startec" />

    <fragment
        android:id="@+id/nav_Advertising"
        android:name="com.example.royalfitnessmhr.ui.advertising.AdvertisingFragment"
        android:label="@string/nav_Advertising"
        tools:layout="@layout/fragment_advertising" />
    <fragment
        android:id="@+id/nav_shareit"
        android:name="com.example.royalfitnessmhr.ui.shareuit.ShareuitFragment"
        android:label="@string/nav_sharee"
        tools:layout="@layout/fragment_shareuit" />

    <fragment
        android:id="@+id/nav_help"
        android:name="com.example.royalfitnessmhr.ui.hlep.HlepFragment"
        android:label="@string/nav_need"
        tools:layout="@layout/fragment_hlep" />
    <fragment
        android:id="@+id/nav_serves"
        android:name="com.example.royalfitnessmhr.ui.serves.ServesFragment"
        android:label="كمال الاجسام"
        tools:layout="@layout/fragment_serves" />
</navigation>